# bayesian_adventures

./: .gitignore  README.md  pyproject.toml
data/: portpirie.csv
exploratory_notebooks/: extreme_modeling.ipynb
